<resources>
    <string name="app_name">饿不得</string>
    <string name="account_name">用户名</string>
    <string name="account_password">密码</string>
    <string name="e">外卖</string>
    <string name="find">发现</string>
    <string name="order">订单</string>
    <string name="account">我的</string>
    <string name="hamburger">汉堡薯条</string>
    <string name="sweet">美味甜点</string>
    <string name="cate">美食</string>
    <string name="drink">清凉饮品</string>
    <string name="barbecue">劲爆烧烤</string>
    <string name="bread">包子粥食</string>
    <string name="name">立即登录</string>
    <string name="phone">登录后享受更多特权</string>
    <string name="money">0.00</string>
    <string name="favourable_number">0</string>
    <string name="integration_part">8888</string>
    <string name="yuan">元</string>
    <string name="number">个</string>
    <string name="part">分</string>
    <string name="money_pay">钱包</string>
    <string name="favourable">优惠</string>
    <string name="integration">积分</string>
    <string name="address">收货地址</string>
    <string name="updateAddress">修改地址</string>
    <string name="buyAddress">选择地址</string>
    <string name="address_name">收货人</string>
    <string name="addAddress">新建地址</string>
    <string name="text">备注</string>
    <string name="love">我的收藏</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="set">账户与安全</string>
    <string name="head">头像</string>
    <string name="setPhone">手机</string>
    <string name="exitLogin">退出登录</string>
    <string name="ok">确定</string>
</resources>