<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/account_linear"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar_account"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary">
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/account_relative"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        >
        <ImageView
            android:id="@+id/head_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/head_picture"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:id="@+id/loginName_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/colorWhite"
            android:textSize="11sp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="40dp"
            />
        <ImageView
            android:layout_width="9dp"
            android:layout_height="16dp"
            android:src="@drawable/right"
            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            >
            <TextView
                android:id="@+id/money"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorOrange"
                android:textSize="25sp"
                />
            <TextView
                android:layout_marginTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuan"
                android:layout_toRightOf="@id/money"
                android:textSize="10sp"
                android:textColor="@color/colorOrange"
                />
            <TextView
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:textSize="12dp"
                android:layout_height="wrap_content"
                android:text="@string/money_pay"
                android:textColor="@color/colorText"
                android:layout_marginBottom="17dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            >
            <TextView
                android:id="@+id/favourable_number"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourable_number"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorRed"
                android:textSize="25sp"
                />
            <TextView
                android:layout_marginTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:layout_toRightOf="@id/favourable_number"
                android:textSize="10sp"
                android:textColor="@color/colorRed"
                />
            <TextView
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:textSize="12dp"
                android:layout_height="wrap_content"
                android:text="@string/favourable"
                android:textColor="@color/colorText"
                android:layout_marginBottom="17dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            >
            <TextView
                android:id="@+id/integration_part"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/integration_part"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorGreen"
                android:textSize="25sp"
                />
            <TextView
                android:layout_marginTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/part"
                android:layout_toRightOf="@id/integration_part"
                android:textSize="10sp"
                android:textColor="@color/colorGreen"
                />
            <TextView
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:textSize="12dp"
                android:layout_height="wrap_content"
                android:text="@string/integration"
                android:textColor="@color/colorText"
                android:layout_marginBottom="17dp"
                />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/address_relative"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/address"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:textSize="15dp"
            android:textColor="@color/colorBlack"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/love_relative"
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:background="@color/colorWhite"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/love"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/love"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:textSize="15dp"
            android:textColor="@color/colorBlack"
            />
    </RelativeLayout>
</LinearLayout>