<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#66000000">

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="320dp"
        android:layout_centerInParent="true"
        android:background="@color/colorBackground">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/e_light" />

        <EditText
            android:id="@+id/login_name_et"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:background="@drawable/search_shape"
            android:hint="@string/account_name"
            android:paddingLeft="10dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190dp"
            android:background="@drawable/search_shape"
            android:hint="@string/account_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="35dp"
            android:layout_marginTop="225dp"
            />
        <Button
            android:id="@+id/login_ok"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="255dp"
            android:background="@drawable/login_btn_shape"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="13sp" />
    </RelativeLayout>
</RelativeLayout>