<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/edit_img"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/edit" />

        <TextView
            android:id="@+id/buy_address_tv"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/phone"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/buy_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:text="@string/account_name"
            android:textColor="@color/colorLine"
            android:textSize="12sp" />

        <TextView
            android:singleLine="true"
            android:ellipsize="end"
            android:id="@+id/buy_text_tv"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/buy_name_tv"
            android:text="@string/text"
            android:textColor="@color/colorLine"
            android:textSize="12sp" />
    </RelativeLayout>
</LinearLayout>