<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/update_left_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="60dp"
            android:text="@string/updateAddress"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/update_delete_img"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/delete"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/address_name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/update_name_edit"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="90dp"
            android:background="@drawable/edit_shape"
            android:textCursorDrawable="@null" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/address"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/update_address_edit"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="90dp"
            android:background="@drawable/edit_shape"
            android:textCursorDrawable="@null" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/update_text_edit"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="90dp"
            android:background="@drawable/edit_shape"
            android:textCursorDrawable="@null" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/update_ok_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:text="@string/ok" />
    </RelativeLayout>
</LinearLayout>